ADD Ticket#831465 + ADD UX task 53

--- a/src/app/pages/contact-us/contact-us-form.component.html
+++ b/src/app/pages/contact-us/contact-us-form.component.html
@@ -93,6 +93,21 @@
                 <p class="text-sm text-red-600 dark:text-red-500"><span class="font-medium">This field is mandatory.</span></p>
             }
         </div>
+        <p class="text-sm text-gray-500 dark:text-gray-200">
+            <span class="font-medium">
+                <b>Information about the processing of personal data is as follows:</b>
+                <a href="{{dataControllerDome}}" target="_blank" 
+                   class="cursor-pointer font-medium text-primary-100 dark:text-primary-50 hover:underline whitespace-nowrap"> Data Controller DOME</a>.
+                Purpose: to send you information about DOME’s project by electronic means. Legal basis: data subject’s consent. Recipients: The personal data collected will not be communicated to third parties, unless requested by public administrations or if required by law. 
+                Exercise of Rights: sending an email to 
+                <a href="mailto:privacy.helpdesk@dome-project.eu" 
+                   class="cursor-pointer font-medium text-primary-100 dark:text-primary-50 hover:underline whitespace-nowrap">privacy.helpdesk&#64;dome-project.eu</a>,
+                indicating in the subject line: "Exercise of rights". You are also entitled to be assisted by a Data Protection Authority. Find more information about personal data processing in
+                <a href="{{DPA}}" target="_blank" 
+                   class="cursor-pointer font-medium text-primary-100 dark:text-primary-50 hover:underline whitespace-nowrap">our here</a>.
+            </span>
+        </p>
+        
         <button type="submit" [disabled]="!contactForm.valid" [ngClass]="!contactForm.valid ? 'opacity-50 cursor-not-allowed' : 'cursor-pointer'" (click)="sendMail()" class="mt-4 py-2 px-3 text-sm font-medium text-center text-white bg-primary-100 hover:bg-primary-50 rounded-lg focus:ring-4 focus:outline-none focus:ring-primary-50">
             Submit
         </button>       
