Improve product order dashboard management

--- a/src/app/pages/product-orders/sections/order-info/order-info.component.html
+++ b/src/app/pages/product-orders/sections/order-info/order-info.component.html
@@ -277,6 +277,27 @@
                                 }
                             </div>
                             <div class="flex flex-row gap-2 pb-2 text-gray-600">
+                              <p class="w-fit text-base font-bold shrink-0 dark:text-white">
+                                  Date
+                              </p>
+                              <h3 class="text-base dark:text-gray-200">
+                                  {{orderToShow?.orderDate | date:'EEEE, dd/MM/yy, HH:mm'}}
+                              </h3>
+                            </div>
+                            <div class="flex flex-row gap-2 pb-2 text-gray-600">
+                              <p class="w-fit text-base font-bold shrink-0 dark:text-white">
+                                  Customer Info:
+                              </p>
+                            </div>
+                            <div class="flex flex-row gap-2 pb-2 text-gray-600">
+                              <p class="w-fit text-base font-bold shrink-0 dark:text-white">
+                                  Name
+                              </p>
+                              <h3 class="text-base dark:text-gray-200">
+                                {{ customerName$ | async }}
+                              </h3>
+                          </div>
+                            <div class="flex flex-row gap-2 pb-2 text-gray-600">
                                 <p class="w-fit text-base font-bold shrink-0 dark:text-white">
                                     Billing address
                                 </p>
@@ -286,19 +307,16 @@
                             </div>
                             <div class="flex flex-row gap-2 pb-2 text-gray-600">
                                 <p class="w-fit text-base font-bold shrink-0 dark:text-white">
-                                    Email
+                                    Contact Email
                                 </p>
                                 <h3 class="text-base dark:text-gray-200">
                                     {{orderToShow.billingAccount.contact[0].contactMedium[0].characteristic.emailAddress}}
                                 </h3>
                             </div>
                             <div class="flex flex-row gap-2 pb-2 text-gray-600">
-                                <p class="w-fit text-base font-bold shrink-0 dark:text-white">
-                                    Date
-                                </p>
-                                <h3 class="text-base dark:text-gray-200">
-                                    {{orderToShow?.orderDate | date:'EEEE, dd/MM/yy, HH:mm'}}
-                                </h3>
+                              <a class="cursor-pointer text-blue-600" (click)="goToCustomerDeatils()">
+                                  Show Customer Details
+                              </a>
                             </div>
                             <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-200 rounded-lg border border-1 border-secondary-50 dark:border-gray-800">
                                 <thead class="text-xs text-gray-700 uppercase bg-gray-100 dark:bg-secondary-200 dark:text-white">
@@ -366,7 +384,7 @@
                                               @if (!item.productOrderItem.state && role == 'Seller') {
                                                 <button type="button" title="Acknowledge the order item"
                                                         class="text-white bg-primary-100 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-full text-sm p-2.5 text-center inline-flex items-center me-2"
-                                                        (click)="openModal('Acknowledge', item)">
+                                                        (click)="openModal('acknowledged', item)">
                                                   <!--!Font Awesome Pro 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2025 Fonticons, Inc.-->
                                                   <svg class="w-[18px] h-[18px] text-white stroke-white fill-white stroke-2" stroke="currentColor"
                                                        xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512">
@@ -376,7 +394,7 @@
 
                                                 <button type="button" title="Reject the order item"
                                                         class="text-red-950 bg-red-500 hover:bg-red-600 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-full text-sm p-2.5 text-center inline-flex items-center me-2"
-                                                        (click)="openModal('Reject', item)">
+                                                        (click)="openModal('rejected', item)">
                                                   <svg class="w-[18px] h-[18px] text-white stroke-white fill-white stroke-2" stroke="currentColor"
                                                        xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
                                                     <path d="M96 80c0-26.5 21.5-48 48-48l288 0c26.5 0 48 21.5 48 48l0 304L96 384 96 80zm145 47c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l47 47-47 47c-9.4 9.4-9.4 24.6 0 33.9s24.6 9.4 33.9 0l47-47 47 47c9.4 9.4 24.6 9.4 33.9 0s9.4-24.6 0-33.9l-47-47 47-47c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-47 47-47-47z"/>
@@ -387,21 +405,21 @@
                                                     @if (item.productOrderItem.state === 'acknowledged') {
                                                       <button type="button" title="Start Order Treatment"
                                                               class="text-green-950 bg-green-500 hover:bg-green-600 focus:ring-4 focus:outline-none focus:ring-green-300 font-medium rounded-full text-sm p-2.5 text-center inline-flex items-center me-2"
-                                                              (click)="updateLifecycle('inProgress', item)">
+                                                              (click)="openModal('inProgress', item)">
                                                         <svg class="w-[18px] h-[18px] text-white stroke-white fill-white stroke-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
                                                           <path class="fa-secondary" opacity=".4" d="M32 80l0 352c0 5.8 3.1 11.1 8.2 14s11.2 2.7 16.2-.3l288-176c4.8-2.9 7.7-8.1 7.7-13.7s-2.9-10.7-7.7-13.7l-288-176c-4.9-3-11.1-3.1-16.2-.3s-8.2 8.2-8.2 14z"/><path class="fa-primary" d="M56.3 66.3c-4.9-3-11.1-3.1-16.2-.3s-8.2 8.2-8.2 14l0 352c0 5.8 3.1 11.1 8.2 14s11.2 2.7 16.2-.3l288-176c4.8-2.9 7.7-8.1 7.7-13.7s-2.9-10.7-7.7-13.7l-288-176zM24.5 38.1C39.7 29.6 58.2 30 73 39L361 215c14.3 8.7 23 24.2 23 41s-8.7 32.2-23 41L73 473c-14.8 9.1-33.4 9.4-48.5 .9S0 449.4 0 432L0 80C0 62.6 9.4 46.6 24.5 38.1z"/></svg>
                                                       </button>
                                                     } @else if (item.productOrderItem.state === 'inProgress') {
                                                       <button type="button" title="Order Completely Treated"
                                                               class="text-green-950 bg-green-500 hover:bg-green-600 focus:ring-4 focus:outline-none focus:ring-green-300 font-medium rounded-full text-sm p-2.5 text-center inline-flex items-center me-2"
-                                                              (click)="updateLifecycle('completed', item)">
+                                                              (click)="openModal('completed', item)">
                                                         <svg class="w-[18px] h-[18px] text-white stroke-white fill-white stroke-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                                                           <path d="M200.3 81.5C210.9 61.5 231.9 48 256 48s45.1 13.5 55.7 33.5L321 99.1l19-5.8c21.6-6.6 46.1-1.4 63.1 15.7s22.3 41.5 15.7 63.1l-5.8 19 17.5 9.3c20 10.6 33.5 31.6 33.5 55.7s-13.5 45.1-33.5 55.7L412.9 321l5.8 19c6.6 21.6 1.4 46.1-15.7 63.1s-41.5 22.3-63.1 15.7l-19-5.8-9.3 17.5c-10.6 20-31.6 33.5-55.7 33.5s-45.1-13.5-55.7-33.5L191 412.9l-19 5.8c-21.6 6.6-46.1 1.4-63.1-15.7S86.6 361.6 93.2 340l5.8-19-17.5-9.3C61.5 301.1 48 280.1 48 256s13.5-45.1 33.5-55.7L99.1 191l-5.8-19c-6.6-21.6-1.4-46.1 15.7-63.1S150.4 86.6 172 93.2l19 5.8 9.3-17.5zM256 0c-35.9 0-67.8 17-88.1 43.4c-33-4.3-67.6 6.2-93 31.6s-35.9 60-31.6 93C17 188.2 0 220.1 0 256s17 67.8 43.4 88.1c-4.3 33 6.2 67.6 31.6 93s60 35.9 93 31.6C188.2 495 220.1 512 256 512s67.8-17 88.1-43.4c33 4.3 67.6-6.2 93-31.6s35.9-60 31.6-93C495 323.8 512 291.9 512 256s-17-67.8-43.4-88.1c4.3-33-6.2-67.6-31.6-93s-60-35.9-93-31.6C323.8 17 291.9 0 256 0zM369 209l17-17L352 158.1l-17 17-111 111-47-47-17-17L126.1 256l17 17 64 64 17 17 17-17L369 209z"/>
                                                         </svg>
                                                       </button>
                                                       <button type="button" title="Order Completely Failed"
                                                               class="text-red-950 bg-red-500 hover:bg-red-600 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-full text-sm p-2.5 text-center inline-flex items-center me-2"
-                                                              (click)="updateLifecycle('failed', item)">
+                                                              (click)="openModal('failed', item)">
                                                         <svg class="w-[18px] h-[18px] text-white stroke-white fill-white stroke-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                                                           <path d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zm24-384l0 24 0 112 0 24-48 0 0-24 0-112 0-24 48 0zM232 368l0-48 48 0 0 48-48 0z"/>
                                                           </svg>
@@ -445,7 +463,7 @@
       <!-- Cuerpo del modal -->
       <div class="p-6 text-center">
         <p class="text-gray-500 dark:text-gray-300">
-          Are you sure you want to <strong>{{ actionType }}</strong> this order item?
+          Are you sure you want to update this order item to <strong>{{ actionType }}</strong> status?
         </p>
       </div>
       <!-- Botones de acción -->
@@ -549,3 +567,20 @@
   </div>
 
 </div>
+
+<!-- FIXME: We need an standalone error message component-->
+@if(showError){
+  <div class="flex justify-center items-center fixed w-fit top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 z-50">
+    <div id="alert-additional-content-2" class="p-4 mb-4 text-red-800 border border-red-300 rounded-lg bg-red-50 dark:bg-red-900 dark:border-red-900 dark:text-white" role="alert">
+      <div class="flex items-center">
+        <svg class="flex-shrink-0 w-4 h-4 me-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+          <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z"/>
+        </svg>
+        <h3 class="text-lg font-medium">Error</h3>
+      </div>
+      <div class="mt-2 mb-4 text-sm">
+        {{errorMessage}}
+      </div>
+    </div>
+  </div>
+}
