FIXES ghost price plans

--- a/src/app/shared/forms/offer/price-plans/price-plans.component.html
+++ b/src/app/shared/forms/offer/price-plans/price-plans.component.html
@@ -42,6 +42,6 @@
     [prodSpec]="prodSpec"
     [action]="action"
     (save)="savePricePlan($event)"
-    (close)="showDrawer = false">
+    (close)="closeDrawer()">
   </app-price-plan-drawer>
 }
