ADD UX task 43 - chatbot

--- a/src/app/chatbot-widget/chatbot-widget.component.css
+++ b/src/app/chatbot-widget/chatbot-widget.component.css
@@ -12,11 +12,11 @@
 }
 
 .chatbot-widget * {
-    --primaryGradient: linear-gradient(93.12deg, #581B98 0.52%, #9C1DE7 100%);
-    --secondaryGradient: linear-gradient(268.91deg, #581B98 -2.14%, #9C1DE7 99.69%);
+    --primaryGradient: linear-gradient(93.12deg, #2d58a7 0.52%, #00add3 100%);
+    --secondaryGradient: linear-gradient(268.91deg, #2d58a7 -2.14%, #00add3 99.69%);
     --primaryBoxShadow: 0px 10px 15px rgba(0, 0, 0, 0.1);
     --secondaryBoxShadow: 0px -10px 15px rgba(0, 0, 0, 0.1);
-    --primary: #581B98;
+    --primary: #2d58a7;
 }
 
 /* CHATBOX
