--- a/src/app/chatbot-widget/chatbot-widget.component.html
+++ b/src/app/chatbot-widget/chatbot-widget.component.html
@@ -1,24 +1,30 @@
 <div class="container chatbot-widget fixed z-20" style="bottom: 30px; right: 0;">
   <div class="chatbox">
     @if(state){
-      <div class="chatbox__support" [ngClass]="state ? 'chatbox__support chatbox--active' : ''">
-        <div class="chatbox__header">
+      <div class="chatbox__support relative" [ngClass]="state ? 'chatbox__support chatbox--active' : ''">
+        <!-- Floating Close Button -->
+        <button class="absolute -top-3 -right-3 w-8 h-8 z-40 bg-primary-100 text-white hover:bg-primary-50 
+                       rounded-full flex items-center justify-center 
+                       shadow-md transition" 
+                (click)="toggleState()">
+          &times;
+        </button>
+
+        <div class="chatbox__header flex items-center p-2 bg-gray-100 border-b">
           <div class="chatbox__image--header">
-            <!--
-              <img src="https://img.icons8.com/color/48/000000/circled-user-female-skin-type-5--v1.png" alt="image">
-            -->
             <img src="assets/chatbot/images/dome_logo.PNG" alt="image">
           </div>
-          <div class="chatbox__content--header">
+          <div class="chatbox__content--header ml-2">
             <h4 class="chatbox__heading--header">DOME support</h4>
-            <p class="chatbox__description--header">Hi. My name is DomeGPT. How can I help you?</p>
+            <p class="chatbox__description--header text-sm text-gray-600">
+              Hi. My name is DomeGPT. How can I help you?
+            </p>
           </div>
         </div>
-        <div class="chatbox__messages">
-        </div>
+        <div class="chatbox__messages"></div>
         <div class="chatbox__footer">
           <input type="text" placeholder="Write a message..." (keyup)="onKeyUp($event)">
-            <button class="chatbox__send--footer chatbox-send__button" (click)="onSendButton()">Send</button>
+          <button class="chatbox__send--footer chatbox-send__button" (click)="onSendButton()">Send</button>
         </div>
       </div>
     }
