--- a/src/app/pages/seller-offerings/offerings/seller-offer/update-offer/update-offer.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-offer/update-offer/update-offer.component.html
@@ -446,7 +446,7 @@
                           </svg>
                           <span class="sr-only">Info</span>
                           <div>
-                              {{ 'UPDATE_OFFER._no_prod_spec' | translate }}
+                              {{ 'UPDATE_OFFER._no_prods_to_proceed' | translate }}
                           </div>
                         </div>
                     </div>                    
