--- a/src/app/pages/product-orders/sections/order-info/order-info.component.html
+++ b/src/app/pages/product-orders/sections/order-info/order-info.component.html
@@ -131,7 +131,7 @@
                                             {{ 'PRODUCT_INVENTORY._order_id' | translate }}
                                         </th>
                                         <th scope="col" class="px-6 py-3 text-center align-middle">
-                                            {{ 'PRODUCT_INVENTORY._state' | translate }}
+                                            {{ 'PRODUCT_INVENTORY._status' | translate }}
                                         </th>
                                         <th scope="col" class="hidden md:table-cell px-6 py-3 text-center align-middle">
                                             {{ 'PRODUCT_INVENTORY._bill' | translate }}
@@ -541,7 +541,7 @@
               {{ note.author === partyId
               ? currentUser
               : (userCache.get(note.author) || 'Loading...' )
-              }} - {{ formatDate(note.date) }}
+              }} - {{note.date | date:'EEEE, dd/MM/yy, HH:mm'}}
 
               <!-- Forzar la obtención del nombre de usuario si no está en caché -->
           <ng-container *ngIf="!userCache.has(note.author)">
