--- a/src/app/pages/user-profile/profile-sections/order-info/order-info.component.html
+++ b/src/app/pages/user-profile/profile-sections/order-info/order-info.component.html
@@ -123,7 +123,7 @@
                                     {{ 'PRODUCT_INVENTORY._order_id' | translate }}
                                 </th>
                                 <th scope="col" class="px-6 py-3 text-center align-middle">
-                                    {{ 'PRODUCT_INVENTORY._state' | translate }}
+                                    {{ 'PRODUCT_INVENTORY._status' | translate }}
                                 </th>
                                 <th scope="col" class="hidden md:table-cell px-6 py-3 text-center align-middle">
                                     {{ 'PRODUCT_INVENTORY._priority' | translate }}
