--- a/src/app/shared/forms/offer/price-plans/price-component-drawer/price-component-drawer.component.html
+++ b/src/app/shared/forms/offer/price-plans/price-component-drawer/price-component-drawer.component.html
@@ -8,7 +8,7 @@
 
     <!-- Título -->
     <h2 class="text-xl font-semibold text-gray-700 dark:text-white">
-      {{ component ? 'Editar Price Component' : 'Nuevo Price Component' }}
+      {{ component ? 'Update Price Component' : 'New Price Component' }}
     </h2>
 
     <form [formGroup]="priceComponentForm" (ngSubmit)="submitForm()" class="mt-4 space-y-4">
@@ -28,9 +28,40 @@
 
       <div>
         <label class="block text-sm font-medium text-gray-700 dark:text-gray-300">Base price</label>
-        <input formControlName="price" type="number" pattern="[0-9]*.[0-9]*" step="0.1"                        
-        class="mb-2 bg-gray-50 dark:bg-secondary-300 border border-gray-300 text-gray-900 dark:border-secondary-200 dark:text-gray-100 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
+      
+        <input
+          formControlName="price"
+          type="number"
+          step="0.1"
+          (blur)="priceComponentForm.get('price')?.markAsTouched()"
+          [ngClass]="{
+            'border-red-500': priceComponentForm.get('price')?.invalid && (priceComponentForm.get('price')?.touched || priceComponentForm.get('price')?.dirty)
+          }"
+          class="mb-2 bg-gray-50 dark:bg-secondary-300 border text-sm rounded-lg block w-full p-2.5
+            text-gray-900 dark:border-secondary-200 dark:text-gray-100 focus:ring-blue-500 focus:border-blue-500"
+        />
+      
+        <!-- Validation Messages -->
+         @if(priceComponentForm.get('price')?.invalid && (priceComponentForm.get('price')?.touched || priceComponentForm.get('price')?.dirty)){
+          <div class="text-red-500 text-sm mt-1">
+            @if(priceComponentForm.get('price')?.errors?.['required']){
+              <div>
+                Price is required.
+              </div>
+            }@else if(priceComponentForm.get('price')?.errors?.['max']){
+              <div>
+                Price cannot exceed 1,000,000,000.
+              </div>
+            }@else if(priceComponentForm.get('price')?.errors?.['min'] && (priceComponentForm.get('price')?.touched || priceComponentForm.get('price')?.dirty)){
+              <div class="text-red-500 text-sm mt-1">
+                Price must be a positive number.
+              </div>
+            }
+          </div>
+         }
       </div>
+      
+      
       @if(profileData){
       <div class="flex">
           <label class="font-bold text-lg dark:text-white">Does this price component apply to a product characteristic?</label>
@@ -108,38 +139,85 @@
       </div>
       @if(showDiscount){
         <div>
-          <label class="block text-sm font-medium text-gray-700 dark:text-gray-300">{{ 'FORMS.PRICE_PLAN_COMPONENT._add_discount' | translate }}</label>
+          <label class="block text-sm font-medium text-gray-700 dark:text-gray-300">
+            {{ 'FORMS.PRICE_PLAN_COMPONENT._add_discount' | translate }}
+          </label>
           <div class="flex space-x-2">
-            <input formControlName="discountValue" type="number" placeholder="Cantidad"
-                    class="w-1/2 p-2 border rounded dark:bg-gray-700 dark:border-gray-600 dark:text-gray-100">
-            <select formControlName="discountUnit" class="w-1/2 p-2 border rounded dark:bg-gray-700 dark:border-gray-600 dark:text-gray-100">
+            <input
+              formControlName="discountValue"
+              type="number"
+              placeholder="Amount"
+              class="w-1/2 p-2 border rounded dark:bg-gray-700 dark:border-gray-600 dark:text-gray-100"
+            >
+            <select
+              formControlName="discountUnit"
+              class="w-1/2 p-2 border rounded dark:bg-gray-700 dark:border-gray-600 dark:text-gray-100"
+            >
               <option value="percentage">{{ 'FORMS.PRICE_PLAN_COMPONENT._percentage' | translate }}</option>
               <option value="fixed">{{ 'FORMS.PRICE_PLAN_COMPONENT._fixed' | translate }}</option>
             </select>
           </div>
+        
+          <!-- Validation Error -->
+           @if(priceComponentForm.get('discountValue')?.invalid && priceComponentForm.get('discountValue')?.touched){
+            <div  class="text-red-500 text-sm mt-1">
+              @if(priceComponentForm.get('discountValue')?.errors?.['min']){
+                <div>
+                  Discount must be at least 0.
+                </div>
+              }@else if(priceComponentForm.get('discountValue')?.errors?.['max']){
+                <div>
+                  Discount cannot exceed 100.
+                </div>
+              }
+            </div>
+           }
+
         </div>
+        
   
         <!-- Duración del Descuento -->
         <div>
-          <label class="block text-sm font-medium text-gray-700 dark:text-gray-300">{{ 'FORMS.PRICE_PLAN_COMPONENT._discount_duration' | translate }}</label>
+          <label class="block text-sm font-medium text-gray-700 dark:text-gray-300">
+            {{ 'FORMS.PRICE_PLAN_COMPONENT._discount_duration' | translate }}
+          </label>
           <div class="flex space-x-2">
-            <input formControlName="discountDuration" type="number" placeholder="Duración"
-                    class="w-1/2 p-2 border rounded dark:bg-gray-700 dark:border-gray-600 dark:text-gray-100">
-            <select formControlName="discountDurationUnit" class="w-1/2 p-2 border rounded dark:bg-gray-700 dark:border-gray-600 dark:text-gray-100">
+            <input
+              formControlName="discountDuration"
+              type="number"
+              placeholder="Duration"
+              class="w-1/2 p-2 border rounded dark:bg-gray-700 dark:border-gray-600 dark:text-gray-100"
+            >
+            <select
+              formControlName="discountDurationUnit"
+              class="w-1/2 p-2 border rounded dark:bg-gray-700 dark:border-gray-600 dark:text-gray-100"
+            >
               <option value="days">{{ 'FORMS.PRICE_PLAN_COMPONENT._days' | translate }}</option>
               <option value="weeks">{{ 'FORMS.PRICE_PLAN_COMPONENT._weeks' | translate }}</option>
               <option value="months">{{ 'FORMS.PRICE_PLAN_COMPONENT._months' | translate }}</option>
               <option value="years">{{ 'FORMS.PRICE_PLAN_COMPONENT._years' | translate }}</option>
             </select>
           </div>
+        
+          <!-- Validation Error -->
+          @if(priceComponentForm.get('discountDuration')?.invalid && priceComponentForm.get('discountDuration')?.touched){
+            <div class="text-red-500 text-sm mt-1">
+              @if(priceComponentForm.get('discountDuration')?.errors?.['min']){
+                <div>
+                  Duration must be a positive number.
+                </div>
+              }
+            </div>
+          }
         </div>
+        
       }
 
 
       <!-- Botones -->
       <div class="flex justify-end space-x-3">
         <button type="button" (click)="closeDrawer()" class="px-4 py-2 bg-gray-300 dark:bg-gray-600 dark-text:white rounded">{{ 'FORMS.PRICE_PLAN_COMPONENT._cancel' | translate }}</button>
-        <button type="submit" class="px-4 py-2 bg-blue-500 text-white rounded">{{ 'FORMS.PRICE_PLAN_COMPONENT._save' | translate }}</button>
+        <button type="submit" [disabled]="priceComponentForm.invalid" [ngClass]="priceComponentForm.invalid ? 'opacity-50 cursor-not-allowed' : 'cursor-pointer'" class="px-4 py-2 bg-blue-500 text-white rounded">{{ 'FORMS.PRICE_PLAN_COMPONENT._save' | translate }}</button>
       </div>
     </form>
 
