--- a/src/app/shared/forms/offer/price-plans/price-components-table/price-components-table.component.html
+++ b/src/app/shared/forms/offer/price-plans/price-components-table/price-components-table.component.html
@@ -68,11 +68,11 @@
 <!-- Modal de Confirmación de Eliminación -->
 <div *ngIf="showDeleteModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center">
   <div class="bg-white dark:bg-gray-800 p-6 rounded-lg shadow-lg">
-    <h2 class="text-lg font-semibold text-gray-700 dark:text-white">¿Eliminar Price Component?</h2>
-    <p class="text-gray-500 dark:text-gray-300">Esta acción no se puede deshacer.</p>
+    <h2 class="text-lg font-semibold text-gray-700 dark:text-white">Are you sure you want to delete this Price Component?</h2>
+    <p class="text-gray-500 dark:text-gray-300">This action can't be undone.</p>
     <div class="flex justify-end mt-4 space-x-3">
-      <button (click)="showDeleteModal = false" class="px-4 py-2 bg-gray-300 dark:bg-gray-600 rounded">Cancelar</button>
-      <button (click)="deletePriceComponent()" class="px-4 py-2 bg-red-500 text-white rounded">Eliminar</button>
+      <button (click)="showDeleteModal = false" class="px-4 py-2 bg-gray-300 dark:bg-gray-600 rounded">Cancel</button>
+      <button (click)="deletePriceComponent()" class="px-4 py-2 bg-red-500 text-white rounded">Delete</button>
     </div>
   </div>
 </div>
